@@ -1,0 +1,1 @@
+Alias /interchange-5 /usr/share/interchange-ui
