@@ -1,3 +1,5 @@
+etc/apache2/conf.d/interchange-ui.conf
 usr/lib/interchange/code/UI_Tag
 usr/lib/interchange/lib/UI
-var/www/interchange-5
+usr/share/interchange-ui
+
